tests/lang/s06_experimental/s01_views/s01_path_expressions/t06_pointer_deref_borrow_fail.nim
discard """
description: '''
Cannot mutate location created from pointer dereference
'''
errormsg: "'view' borrows from location 'source' which does not live long enough"
"""

{.experimental: "views".}

proc block_pointer_deref_borrow() =
  ## Pointer dereference `e[]` is a path expression.

  var data = 12
  var source = addr data

  var view: lent int = source[]

  source = addr data

  discard view

block_pointer_deref_borrow()